--- a/gmall_passport_web/src/main/resources/templates/index.html
+++ b/gmall_passport_web/src/main/resources/templates/index.html
@@ -100,7 +100,8 @@
                             var originUrl = $("#originUrl").val();
                             console.log("originUrl:"+originUrl);
                             if(originUrl==''){
-                                window.location.href="http://www.gmall.com/"
+								console.log(originUrl+"newToken="+data);
+                               window.location.href="http://www.gmall.com/"
 								return ;
                             }
                               originUrl = decodeURIComponent(originUrl);
@@ -111,6 +112,7 @@
                             }else{
                                 originUrl+='&'
                             }
+                            console.log(originUrl+"newToken="+data);
                             window.location.href=originUrl+"newToken="+data;
                             return ;
                         }else{
